--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Simple To do List App</h1>
+      <h1>Simple ToDo List App</h1>
       <input type="text" id="taskInput" placeholder="Add new task" />
       <button onclick="addTask()">Add</button>
       <ul id="taskList"></ul>
